--- a/src/tw/mhyang/ooad/project/main.css
+++ b/src/tw/mhyang/ooad/project/main.css
@@ -1,4 +1,4 @@
-.theChooseOne{
+.theChosenOne{
     -fx-background-color: linear-gradient(#61a2b1, #2A5058);
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
 }
